--- a/ec2/static/css/homepage.css
+++ b/ec2/static/css/homepage.css
@@ -1,62 +1,27 @@
-html,
 body {
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  font-family: 'Space Mono', monospace;
-  font-size: 50px;
+	font-family: 'Space Mono', monospace;
 }
 
-.container {
-  position: relative;
-  height: 100%;
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-box;
-  display: box;
-
-  -ms-flex-direction: row;
-  -webkit-box-orient: horizontal;
-  -moz-box-orient: horizontal;
-  -ms-box-orient: horizontal;
-  box-orient: horizontal;
-  min-width: 1000px;
+.img-rounded {
+	width: 284px;
+	height: 166px;
 }
 
-.chief {
-  position: relative;
-  background: #ffffff;
-  -ms-flex: 1;
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  -ms-box-flex: 1;
-  box-flex: 1;
-}
-
-.employee {
-  background: #ffffff;
-  -ms-flex: 1;
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  -ms-box-flex: 1;
-  box-flex: 1;
+.col-vertical-offset {
+  margin-top: 30%;
 }
 
 a {
-  border-bottom: 5px dotted #000;
+	text-decoration: none;
+	color: black;
+	outline: none;
+}
+
+a:visited {
+  color: #000;
+  }
+
+a:hover {
+  color: #000;
   text-decoration: none;
-  color: inherit;
-}
-
-.chief-btn {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-}
-
-.employee-btn {
-  position: absolute;
-  top: 50%;
-  right: 25%;
 }
