--- a/ec2/templates/homepage.html
+++ b/ec2/templates/homepage.html
@@ -3,13 +3,30 @@
 <html>
 <head>
 	<title></title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="
+	sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="
+	sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="
+	sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
 	<link rel="stylesheet" type="text/css" href="{% static "css/homepage.css" %}">
 </head>
 <body>
 
 <div class="container">
-	<div class="chief"><a href="{% url 'ec2:instance' 'chief' basic_instance %}" class="chief-btn">Chief</a></div>
-	<div class="employee"><a href="{% url 'ec2:instance' 'employee' basic_instance %}" class="employee-btn">Employee</a></div>
+  <div class="row">
+
+    <div class="col-md-4 col-vertical-offset col-md-offset-4">
+    	<a href="{% url 'social:begin' 'google-oauth2' %}"><img src="{% static "images/gmail_logo.png" %}" alt="gmail_logo" class="img-rounded"></a>
+        <h4><a href="{% url 'social:begin' 'google-oauth2' %}">Login via @raccoongang.com</a><br></h5>
+    </div>
+
+  </div>
 </div>
 
 </body>
